--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -45,7 +45,7 @@
 
 .area-header {
 	-fx-padding: 20px 0px 5px 30px;
-	-fx-font-size: 36px;
+	-fx-font-size: 24px;
 	-fx-background-color: #292929;
 	-fx-text-fill: white;
 	-fx-font-weight: bold;
@@ -58,11 +58,11 @@
 }
 
 .section-header1 {
-	-fx-font-size: 24px;
+	-fx-font-size: 18px;
 }
 
 .section-header2 {
-	-fx-font-size: 18px;
+	-fx-font-size: 16px;
 }
 
 .section {
